# cell-locator

./: .gitignore  .readthedocs.yaml  BUILD.md  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  MAINTAINERS.md  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  qa-checklist.md
.github/workflows/: python-publish.yml
Applications/: CMakeLists.txt
Applications/App/: qAppMainWindow.cxx
Applications/CellLocatorApp/: CMakeLists.txt  Main.cxx  qCellLocatorAppMainWindow.cxx  qCellLocatorAppMainWindow.h  qCellLocatorAppMainWindow_p.h  slicer-application-properties.cmake
Applications/CellLocatorApp/Resources/Icons/: DesktopIcon.icns
Applications/CellLocatorApp/Resources/Icons/XLarge/: DesktopIcon.icns
Applications/CellLocatorApp/Resources/Settings/: DefaultSettings.ini
Applications/CellLocatorApp/Widgets/: qAppStyle.cxx  qAppStyle.h
Documentation/: AnnotationFileFormat.md  CoordinateSystem.md  acknowledgments.md  app-overview.md  command-line-tools.md  conf.py  coordinate-systems.md  getting-started.md  index.md  index.rst  license.md  lims-integration.md  reference-atlases.md  requirements.txt
Documentation/_sphinxext/: workaround_recommonmark_issue_191.py
Documentation/developer-guide/: annotation-file-format.md  annotation-file-version-changlist.md  building.md  cell-locator-api.md  cl-convert-api.md  index.md
Documentation/developer_guide/: AnnotationExporter.md  AnnotationFileConverter.md  AnnotationFileFormat.md  Annotations.md  Annotations.rst  CoordinateSystem.md  LIMSIntegration.md  build_instructions.md  build_instructions.rst  index.md  index.rst  maintainers.md  maintainers.rst
Documentation/user_guide/: about.md  getting_started.md  user_interface.md
Modules/: CMakeLists.txt
Modules/Loadable/: CMakeLists.txt
Modules/Loadable/Splines/: CMakeLists.txt  qSlicerSplinesModule.cxx  qSlicerSplinesModule.h  qSlicerSplinesModuleWidget.h  qSlicerSplinesReader.cxx  qSlicerSplinesReader.h
Modules/Loadable/Splines/Logic/: CMakeLists.txt  vtkSlicerSplinesLogic.cxx  vtkSlicerSplinesLogic.h
Modules/Loadable/Splines/MRML/: CMakeLists.txt  vtkMRMLMarkupsSplinesNode.cxx  vtkMRMLMarkupsSplinesNode.h  vtkMRMLMarkupsSplinesStorageNode.cxx  vtkMRMLMarkupsSplinesStorageNode.h
Modules/Loadable/Splines/MRMLDM/: CMakeLists.txt  vtkMRMLMarkupsSplinesDisplayableManager2D.cxx  vtkMRMLMarkupsSplinesDisplayableManager3D.cxx
Modules/Scripted/: CMakeLists.txt
Modules/Scripted/Home/: CMakeLists.txt  Home.py
Modules/Scripted/Home/Data/: GenerateLayerOntology.py  ccf-layer-ontology-formatted.json
Modules/Scripted/Home/HomeLib/: CellLocatorConfig.py.in  Home.qrc
Modules/Scripted/Home/Resources/UI/: AtlasSelection.ui  Home.ui
Scripts/: .gitignore  CellLocatorAnnotationFormatConverter.py  CreateColorTable.py  GenerateContiguousAnnotation.py  GenerateLayerOntology.py  README.md  pyproject.toml  version-changlist.md
Scripts/cltool/: README.md  main.py  requirements.txt
Scripts/convert/: .gitignore  compare.sh  convert.py  converters.py  idem.sh  model.py  update.sh  version-changlist.md
Scripts/convert/versions/: v0.0.0+2019.01.26.py  v0.0.0+2020.04.16.py  v0.0.0+2020.08.26.py  v0.1.0+2020.09.18.py  v0.1.1+2021.06.11.py  v0.2.0+2021.08.12.py  v0.2.1+2022.03.04.py
Scripts/src/cl_convert/versions/: v0.0.0+2019.01.26.py  v0.0.0+2020.04.16.py  v0.0.0+2020.08.26.py  v0.1.0+2020.09.18.py  v0.1.1+2021.06.11.py  v0.2.1+2022.03.04.py
Scripts/src/cl_export/: vtk2sitk.py
cell-locator-cli/: pyproject.toml  version-changlist.md
cell-locator-cli/src/cl_convert/: convert.py  converters.py  model.py
cell-locator-cli/src/cl_convert/versions/: v0.0.0+2019.01.26.py  v0.0.0+2020.08.26.py  v0.1.0+2020.09.18.py  v0.2.1+2022.03.04.py
cell-locator-cli/src/cl_export/: export.py
