[project]
name = "cell_locator_cli"
version = "0.0.1"
readme = "README.md"
dependencies = [
    "vtk-addon",
    "SimpleITK",
]

description = "CLI Tools for Cell Locator"
authors = [
    { name = "David Allemang", email = "david.allemang@kitware.com" },
    { name = "Jean-Christophe Fillion-Robin", email = "jcfr@kitware.com" },
]

license = { text = "Slicer License" }
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.scripts]
cl-export = "cl_export.export:main"
cl-convert = "cl_convert.convert:main"

[project.urls]
repository = "https://github.com/BICCN/cell-locator"
homepage = "https://github.com/BICCN/cell-locator/tree/master/Scripts"
documentation = "https://cell-locator.rtfd.io"
